# marketing-data-engineering-pipeline-lab

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/raw/: customers.csv  ga4_events.csv  google_ads_campaigns.csv
docs/: architecture.md  data_model.md  gcp_bigquery_extension.md  troubleshooting.md
sql/: 01_create_schema.sql  02_create_tables.sql  03_insert_dimensions.sql  04_analytics_queries.sql  05_data_quality_checks.sql
src/: __init__.py  config.py  extract.py  load.py  pipeline.py  quality.py  transform.py
tests/: test_quality.py  test_transform.py
